syntax = "proto3";

package thesocialnetwork;

service SocialNetwork {
  rpc GetUserByName (UserByNameRequest) returns (UserResponse);
  rpc AddFriend (FriendRequest) returns (FriendResponse);
  rpc RemoveFriend (FriendRequest) returns (FriendResponse);
  rpc PostMessage (PostMessageRequest) returns (MessageStatusResponse);
  rpc Timeline (TimelineRequest) returns (stream TimelineResponse);
  rpc TagReadMessage (MessageTagRequest) returns (MessageStatusResponse);
  rpc TagUnreadMessage (MessageTagRequest) returns (MessageStatusResponse);
  rpc RealTimeNotifications (NotificationsRequest) returns (stream NotificationsResponse);
}

message UserByNameRequest {
  string name = 1;
}

message UserResponse {
  string user_id = 1;
  string name = 2;
}

message FriendRequest {
  string user_id = 1;
  string friend_id = 2;
}

message FriendResponse {
  bool success = 1;
}

message MessageTagRequest {
  string user_id = 1;
  string message_id = 2;
}

message MessageRequest {
  string message_id = 1;
}

message Message {
  string user_id = 1;
  string message_id = 2;
  uint64 timestamp = 3;
  string content = 4;
  bool read = 5;
}

message PostMessageRequest {
  string user_id = 1;
  string content = 2;
}

message MessageStatusResponse {
  bool success = 1;
}

message TimelineRequest {
  string user_id = 1;
}

message TimelineResponse {
  repeated Message messages = 1;
}

message NotificationsRequest {
  string user_id = 1;
}

message NotificationsResponse {
  Message message = 1;
}